# mcospy2

./: .gitignore  README.md  getCookie.cmd  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.scripts.json
.github/workflows/: release.yml
public/: global.css  layout.bundle.js  layout.html  main.html  renderer.js
public/routes/: main.html  mobile_controller.html
scripts/: prepare-agent-resource.cjs  prepare-frida-binding.cjs  release.cjs
src/: auth.ts  bridge.ts  commander.ts  index.ts  index.ts.electron-backup  ipc.ts  keymaps.ts  layout.ts  main.ts  offsets.ts  preload.ts  type.d.ts
src-tauri/: Cargo.toml  agent.js  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/core/: cheatPolicy.ts  guardedIpc.ts  permissions.ts  server.ts
src/data/: frida.ts  utils.ts
src/scripts/: agent.ts  arm.ts  inj.ts  mute-logging.ts  test.ts
src/ui/: devtools.ts  dom.ts
~/.tauri/: mcospy.key  mcospy.key.pub
