[package]
name = "mcospy"
version = "1.0.5"
authors = ["sandfairy1219"]
description = "MilkChoco Frida cheat tool"
edition = "2021"

[lib]
name = "mcospy_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portpicker = "0.1"
